Now correctly typed words and letters are not visible. words that are to be typed are moving from right to left imitating actual time lapse

--- a/main.css
+++ b/main.css
@@ -1,3 +1,10 @@
+body {
+    background: radial-gradient(circle, #333333, #1b1a1a);
+    height: 100vh;
+    margin: 0;
+}
+
+
 #life {
     font-size: 24px;
     color: red;
@@ -12,31 +19,45 @@
     padding: 10px;
 }
 
-#correctly_typed {
+/* #correctly_typed {
     font-size: 18px;
     color: darkgreen;
     background-color: lightgreen;
     padding: 10px;
     display: inline-block;
     white-space: nowrap;
-}
+} */
 
-#actual_character {
+#wrongly_typed_char {
     font-size: 20px;
     color: red;
     font-weight: bold;
-    padding: 10px;
-    display: inline-block;
-    white-space: nowrap;
+    gap: 10px;
+    min-width: 100px;
+    text-align: right;
+}
+
+#actual_word_right {
+    font-size: 20px;
+    color: rgb(153, 130, 0);
+    font-weight: bold;
+    gap: 10px;
+    min-width: 10%;
 }
 
 #to_be_typed {
-    font-size: 18px;
+    font-size: 20px;
     color: gold;
-    padding: 10px;
-    display: inline-block;
-    white-space: nowrap;
-    /* overflow-x: hidden; */
-    text-overflow: ellipsis;
-    background: linear-gradient(to right, yellow, transparent);
+    font-weight: bold;
+    background: rgba(255, 255, 0, 0.334);
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    margin-right: 5%;
+}
+
+#words {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 10px;
 }
